RESOLVED FIXED306924
Address unsafe data member warning in ViewGestureControllerIOS.mm
https://bugs.webkit.org/show_bug.cgi?id=306924
Summary Address unsafe data member warning in ViewGestureControllerIOS.mm
Chris Dumez
Reported 2026-02-03 20:29:03 PST
Address unsafe data member warning in ViewGestureControllerIOS.mm.
Attachments
Chris Dumez
Comment 1 2026-02-03 20:30:23 PST
EWS
Comment 2 2026-02-04 00:34:16 PST
Committed 306760@main (f7f0f38a6b05): <https://commits.webkit.org/306760@main> Reviewed commits have been landed. Closing PR #57837 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-04 00:35:13 PST
Note You need to log in before you can comment on or make changes to this bug.