Address unsafe data member warning in ViewGestureControllerIOS.mm https://bugs.webkit.org/show_bug.cgi?id=306924

Reviewed by Darin Adler and Anne van Kesteren.

* Source/WebKit/SaferCPPExpectations/NoUncountedMemberCheckerExpectations:
* Source/WebKit/UIProcess/ios/ViewGestureControllerIOS.mm:
(-[WKSwipeTransitionController startInteractiveTransition:]):
(-[WKSwipeTransitionController shouldBeginInteractiveTransition:]):

Canonical link: https://commits.webkit.org/306760@main